@@ -13,12 +13,11 @@ Grouped sequences will be <base>.groupN.fa files.
 
 Use '-h' for parameter help.
 
-@CTB note that if THRESHOLD is != 1, those sequences will not be output
+@CTB note that if threshold is != 1, those sequences will not be output
 by output_unassigned...
 """
 
 import sys
-import os.path
 import screed
 import argparse
 
@@ -27,16 +26,17 @@ DEFAULT_THRESHOLD = 5
 
 
 def read_partition_file(filename):
-    for n, record in enumerate(screed.open(filename, parse_description=False)):
+    for record_index, record in enumerate(screed.open
+                                          (filename, parse_description=False)):
         name, partition_id = record.name.rsplit('\t', 1)
-        yield n, record, int(partition_id)
+        yield record_index, record, int(partition_id)
 
 
-def output_single(r):
-    if hasattr(r, 'accuracy'):
-        return "@%s\n%s\n+\n%s\n" % (r.name, r.sequence, r.accuracy)
+def output_single(read):
+    if hasattr(read, 'accuracy'):
+        return "@%s\n%s\n+\n%s\n" % (read.name, read.sequence, read.accuracy)
     else:
-        return ">%s\n%s\n" % (r.name, r.sequence)
+        return ">%s\n%s\n" % (read.name, read.sequence)
 
 #
 
@@ -63,8 +63,8 @@ def main():
 
     args = parser.parse_args()
 
-    MAX_SIZE = args.max_size
-    THRESHOLD = args.min_part_size
+    max_size = args.max_size
+    threshold = args.min_part_size
     output_groups = args.output_groups
     output_unassigned = args.output_unass
 
@@ -77,8 +77,8 @@ def main():
     print 'reading partitioned files:', repr(args.part_filenames)
     if output_groups:
         print 'outputting to files named "%s.groupN.fa"' % prefix
-        print 'min reads to keep a partition:', THRESHOLD
-        print 'max size of a group file:', MAX_SIZE
+        print 'min reads to keep a partition:', threshold
+        print 'max size of a group file:', max_size
     else:
         print 'NOT outputting groups! Beware!'
 
@@ -90,41 +90,41 @@ def main():
 
     #
 
-    SUFFIX = 'fa'
+    suffix = 'fa'
     is_fastq = False
 
-    for n, r, pid in read_partition_file(args.part_filenames[0]):
-        if hasattr(r, 'accuracy'):
-            SUFFIX = 'fq'
+    for index, read, pid in read_partition_file(args.part_filenames[0]):
+        if hasattr(read, 'accuracy'):
+            suffix = 'fq'
             is_fastq = True
         break
 
     for filename in args.part_filenames:
-        for n, r, pid in read_partition_file(filename):
+        for index, read, pid in read_partition_file(filename):
             if is_fastq:
-                assert hasattr(r, 'accuracy'), \
+                assert hasattr(read, 'accuracy'), \
                     "all input files must be FASTQ if the first one is"
             else:
-                assert not hasattr(r, 'accuracy'), \
+                assert not hasattr(read, 'accuracy'), \
                     "all input files must be FASTA if the first one is"
 
             break
 
     if output_unassigned:
-        unassigned_fp = open('%s.unassigned.%s' % (prefix, SUFFIX), 'w')
+        unassigned_fp = open('%s.unassigned.%s' % (prefix, suffix), 'w')
 
     count = {}
     for filename in args.part_filenames:
-        for n, r, pid in read_partition_file(filename):
-            if n % 100000 == 0:
-                print '...', n
+        for index, read, pid in read_partition_file(filename):
+            if index % 100000 == 0:
+                print '...', index
 
             count[pid] = count.get(pid, 0) + 1
 
             if pid == 0:
                 n_unassigned += 1
                 if output_unassigned:
-                    print >>unassigned_fp, output_single(r)
+                    print >>unassigned_fp, output_single(read)
 
     if output_unassigned:
         unassigned_fp.close()
@@ -142,10 +142,10 @@ def main():
 
     total = 0
     wtotal = 0
-    for c, n in sorted(dist.items()):
-        total += n
-        wtotal += c * n
-        distfp.write('%d %d %d %d\n' % (c, n, total, wtotal))
+    for counter, index in sorted(dist.items()):
+        total += index
+        wtotal += counter * index
+        distfp.write('%d %d %d %d\n' % (counter, index, total, wtotal))
     distfp.close()
 
     if not output_groups:
@@ -153,9 +153,9 @@ def main():
 
     # sort groups by size
     divvy = sorted(count.items(), key=lambda y: y[1])
-    divvy = filter(lambda y: y[1] > THRESHOLD, divvy)
+    divvy = filter(lambda y: y[1] > threshold, divvy)
 
-    # divvy up into different groups, based on having MAX_SIZE sequences
+    # divvy up into different groups, based on having max_size sequences
     # in each group.
     total = 0
     group = set()
@@ -165,7 +165,7 @@ def main():
         group.add(partition_id)
         total += n_reads
 
-        if total > MAX_SIZE:
+        if total > max_size:
             for partition_id in group:
                 group_d[partition_id] = group_n
                 # print 'group_d', partition_id, group_n
@@ -187,9 +187,9 @@ def main():
 
     # open a bunch of output files for the different groups
     group_fps = {}
-    for n in range(group_n):
-        fp = open('%s.group%04d.%s' % (prefix, n, SUFFIX), 'w')
-        group_fps[n] = fp
+    for _ in range(group_n):
+        group_fp = open('%s.group%04d.%s' % (prefix, _, suffix), 'w')
+        group_fps[_] = group_fp
 
     # write 'em all out!
 
@@ -197,10 +197,10 @@ def main():
     part_seqs = 0
     toosmall_parts = 0
     for filename in args.part_filenames:
-        for n, r, partition_id in read_partition_file(filename):
+        for index, read, partition_id in read_partition_file(filename):
             total_seqs += 1
-            if n % 100000 == 0:
-                print '...x2', n
+            if index % 100000 == 0:
+                print '...x2', index
 
             if partition_id == 0:
                 continue
@@ -208,25 +208,25 @@ def main():
             try:
                 group_n = group_d[partition_id]
             except KeyError:
-                assert count[partition_id] <= THRESHOLD
+                assert count[partition_id] <= threshold
                 toosmall_parts += 1
                 continue
 
             outfp = group_fps[group_n]
 
-            outfp.write(output_single(r))
+            outfp.write(output_single(read))
             part_seqs += 1
 
     print '---'
     print 'Of %d total seqs,' % total_seqs
     print 'extracted %d partitioned seqs into group files,' % part_seqs
-    print 'discarded %d sequences from small partitions (see -X),' % \
+    print 'discarded %d sequences from small partitions (see -m),' % \
         toosmall_parts
     print 'and found %d unpartitioned sequences (see -U).' % n_unassigned
     print ''
     print 'Created %d group files named %s.groupXXXX.%s' % (len(group_fps),
                                                             prefix,
-                                                            SUFFIX)
+                                                            suffix)
 
 if __name__ == '__main__':
     main()
