@@ -10,7 +10,7 @@ from cStringIO import StringIO
 import subprocess
 import traceback
 
-import khmer_tst_utils as utils
+import tests.khmer_tst_utils as utils
 import khmer
 import screed
 
@@ -630,12 +630,12 @@ def test_load_graph_fail():
     assert "ERROR:" in err
 
 
-def _make_graph(infilename, SIZE=1e7, N=2, K=20,
+def _make_graph(infilename, min_hashsize=1e7, n_hashes=2, ksize=20,
                 do_partition=False,
                 annotate_partitions=False,
                 stop_big_traverse=False):
     script = scriptpath('load-graph.py')
-    args = ['-x', str(SIZE), '-N', str(N), '-k', str(K)]
+    args = ['-x', str(min_hashsize), '-N', str(n_hashes), '-k', str(ksize)]
 
     outfile = utils.get_temp_filename('out')
     infile = utils.get_test_data(infilename)
@@ -658,7 +658,7 @@ def _make_graph(infilename, SIZE=1e7, N=2, K=20,
         runscript(script, args)
 
         script = scriptpath('merge-partitions.py')
-        args = [outfile, '-k', str(K)]
+        args = [outfile, '-k', str(ksize)]
         runscript(script, args)
 
         final_pmap_file = outfile + '.pmap.merged'
@@ -666,7 +666,7 @@ def _make_graph(infilename, SIZE=1e7, N=2, K=20,
 
         if annotate_partitions:
             script = scriptpath('annotate-partitions.py')
-            args = ["-k", str(K), outfile, infilename]
+            args = ["-k", str(ksize), outfile, infilename]
 
             in_dir = os.path.dirname(outfile)
             runscript(script, args, in_dir)
@@ -677,12 +677,12 @@ def _make_graph(infilename, SIZE=1e7, N=2, K=20,
     return outfile
 
 
-def _DEBUG_make_graph(infilename, SIZE=1e7, N=2, K=20,
+def _DEBUG_make_graph(infilename, min_hashsize=1e7, n_hashes=2, ksize=20,
                       do_partition=False,
                       annotate_partitions=False,
                       stop_big_traverse=False):
     script = scriptpath('load-graph.py')
-    args = ['-x', str(SIZE), '-N', str(N), '-k', str(K)]
+    args = ['-x', str(min_hashsize), '-N', str(n_hashes), '-k', str(ksize)]
 
     outfile = utils.get_temp_filename('out')
     infile = utils.get_test_data(infilename)
@@ -707,7 +707,7 @@ def _DEBUG_make_graph(infilename, SIZE=1e7, N=2, K=20,
 
         print ">>>> DEBUG: Merging Partitions <<<"
         script = scriptpath('merge-partitions.py')
-        args = [outfile, '-k', str(K)]
+        args = [outfile, '-k', str(ksize)]
         DEBUG_runscript(script, args)
 
         final_pmap_file = outfile + '.pmap.merged'
@@ -716,7 +716,7 @@ def _DEBUG_make_graph(infilename, SIZE=1e7, N=2, K=20,
         if annotate_partitions:
             print ">>>> DEBUG: Annotating Partitions <<<"
             script = scriptpath('annotate-partitions.py')
-            args = ["-k", str(K), outfile, infilename]
+            args = ["-k", str(ksize), outfile, infilename]
 
             in_dir = os.path.dirname(outfile)
             DEBUG_runscript(script, args, in_dir)
@@ -752,7 +752,7 @@ def test_partition_graph_1():
 
 def test_partition_graph_nojoin_k21():
     # test with K=21
-    graphbase = _make_graph(utils.get_test_data('random-20-a.fa'), K=21)
+    graphbase = _make_graph(utils.get_test_data('random-20-a.fa'), ksize=21)
 
     script = scriptpath('partition-graph.py')
     args = [graphbase]
@@ -862,7 +862,7 @@ def test_annotate_partitions_2():
     # test with K=21 (no joining of sequences)
     seqfile = utils.get_test_data('random-20-a.fa')
     graphbase = _make_graph(seqfile, do_partition=True,
-                            K=21)
+                            ksize=21)
     in_dir = os.path.dirname(graphbase)
 
     # get the final pmap file
@@ -941,6 +941,124 @@ def test_extract_partitions_fq():
     quals = set([r.accuracy for r in screed.open(partfile)])
     quals = list(quals)
     assert quals[0], quals
+
+
+def test_extract_partitions_output_unassigned():
+    seqfile = utils.get_test_data('random-20-a.fa')
+    graphbase = _make_graph(
+        seqfile, do_partition=True, annotate_partitions=True)
+    in_dir = os.path.dirname(graphbase)
+
+    # get the final part file
+    partfile = os.path.join(in_dir, 'random-20-a.fa.part')
+
+    # ok, now run extract-partitions.
+    script = scriptpath('extract-partitions.py')
+    args = ['-U', 'extracted', partfile]
+
+    runscript(script, args, in_dir)
+
+    distfile = os.path.join(in_dir, 'extracted.dist')
+    groupfile = os.path.join(in_dir, 'extracted.group0000.fa')
+    unassigned_file = os.path.join(in_dir, 'extracted.unassigned.fa')
+    assert os.path.exists(distfile)
+    assert os.path.exists(groupfile)
+    assert os.path.exists(unassigned_file)
+
+    dist = open(distfile).readline()
+    assert dist.strip() == '99 1 1 99'
+
+    parts = [r.name.split('\t')[1] for r in screed.open(partfile)]
+    assert len(parts) == 99, len(parts)
+    parts = set(parts)
+    assert len(parts) == 1, len(parts)
+
+
+def test_extract_partitions_no_output_groups():
+    seqfile = utils.get_test_data('random-20-a.fq')
+    graphbase = _make_graph(
+        seqfile, do_partition=True, annotate_partitions=True)
+    in_dir = os.path.dirname(graphbase)
+
+    # get the final part file
+    partfile = os.path.join(in_dir, 'random-20-a.fa.part')
+
+    # ok, now run extract-partitions.
+    script = scriptpath('extract-partitions.py')
+    args = ['-n', 'extracted', partfile]
+
+    # We expect a sys.exit -> we need the test to be tolerant
+    runscript(script, args, in_dir, fail_ok=True)
+
+    # Group files are created after output_groups is
+    # checked. They should not exist in this scenario
+    groupfile = os.path.join(in_dir, 'extracted.group0000.fa')
+    assert not os.path.exists(groupfile)
+
+
+def test_extract_partitions_pid_0():
+    basefile = utils.get_test_data('random-20-a.fa.part')
+    partfile = utils.get_temp_filename('random-20-a.fa.part')
+    shutil.copyfile(basefile, partfile)
+
+    in_dir = os.path.dirname(partfile)
+    # ok, now run extract-partitions.
+    script = scriptpath('extract-partitions.py')
+    args = ['-U', 'extracted', partfile]
+
+    runscript(script, args, in_dir)
+
+    distfile = os.path.join(in_dir, 'extracted.dist')
+    groupfile = os.path.join(in_dir, 'extracted.group0000.fa')
+    unassigned_file = os.path.join(in_dir, 'extracted.unassigned.fa')
+    assert os.path.exists(distfile)
+    assert os.path.exists(groupfile)
+    assert os.path.exists(unassigned_file)
+
+    # Assert unassigned file not empty
+    unassigned_content = open(unassigned_file).readline()
+    assert unassigned_content.strip().split('\t')[0] != ''
+
+
+def test_extract_partitions_multi_groups():
+    basefile = utils.get_test_data('random-20-a.fa.part')
+    partfile = utils.get_temp_filename('random-20-a.fa.part')
+    shutil.copyfile(basefile, partfile)
+
+    in_dir = os.path.dirname(partfile)
+
+    # ok, now run extract-partitions.
+    script = scriptpath('extract-partitions.py')
+    args = ['-m', '1', '-X', '1', 'extracted', partfile]
+
+    runscript(script, args, in_dir)
+
+    # Multiple group files are created after should be created
+    groupfile1 = os.path.join(in_dir, 'extracted.group0000.fa')
+    groupfile2 = os.path.join(in_dir, 'extracted.group0001.fa')
+    groupfile3 = os.path.join(in_dir, 'extracted.group0002.fa')
+    assert os.path.exists(groupfile1)
+    assert os.path.exists(groupfile2)
+    assert os.path.exists(groupfile3)
+
+
+def test_extract_partitions_no_groups():
+    empty_file = utils.get_temp_filename('empty-file')
+    basefile = utils.get_test_data('empty-file')
+
+    shutil.copyfile(basefile, empty_file)
+    in_dir = os.path.dirname(empty_file)
+
+    # ok, now run extract-partitions.
+    script = scriptpath('extract-partitions.py')
+    args = ['extracted', empty_file]
+
+    runscript(script, args, in_dir)
+
+    # No group files should be created
+    groupfile = os.path.join(in_dir, 'extracted.group0000.fa')
+
+    assert not os.path.exists(groupfile)
 
 
 def test_abundance_dist():
